# SummaryForDoc-win

./: .gitignore  BUILD_COMPLETE.md  CHANGELOG.md  CHANGELOG_WINDOWS.md  GETTING_STARTED.md  INSTALLER_GUIDE.md  INSTALLER_QUICKSTART.md  QUICKSTART_BUILT_APP.md  README.md  SummaryForDoc.spec  TESSERACT_JAPANESE_INSTALL.md  TESTING_GUIDE.md  WINDOWS_BUILD.md  WINDOWS_QUICKSTART.md  build_installer.bat  build_pyinstaller.bat  copy_tesseract.sh  copy_tesseract_windows.bat  create_icon.py  generate_guid.ps1  installer.iss  main.py  pyproject.toml  requirements.txt  開発メモ_OCR対応.txt  開発メモ_Windows版ビルド準備.txt  開発メモ_カスタムプロンプト機能.txt
src/: config.py  config_manager.py  file_reader.py  pii_remover.py  presets.py  prompts.py  summarizer.py
tests/: sample_medical_record.txt
